# thehodl

./: LICENSE  README.md  flake.nix  pyproject.toml
.trunk/: trunk.yaml
thehodl/: manage.py
thehodl/thehodl/: asgi.py  settings.py  urls.py  wsgi.py
