[tool.poetry]
name = "thehodl"
version = "0.0.1"
description = "Hold cryptocurrency forever"
authors = ["Robin Rheem"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
